tests/tooling/fixtures/native/recovery/negative/negative_block_comment_lexer_nested.objc3
// Expected diagnostic code(s): O3L003.
module NegativeBlockCommentLexerNested;

/* outer block comment
   /* nested block comment */
*/
fn main() -> i32 {
  return 0;
}
